<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    tools:context=".ListarHistorialPartidas">

  <!--
  <Button
      android:id="@+id/buttonVolverRanking"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@android:color/holo_blue_light"
      android:onClick="vueltaPrincipal"
      android:text="@string/goBackButton" />
-->

  <TextView
      android:id="@+id/txt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/resultadoPartidas"
      android:textSize="20dp"
      android:textStyle="bold">

  </TextView>

  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:paddingLeft="5dp"
      android:paddingRight="5dp">

    <TableRow
        android:background="#51B435"
        android:padding="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/j1" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/j2" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/dificultad" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/resultados" />
    </TableRow>

  </TableLayout>

  <ListView
      android:id="@+id/lista"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <TextView
      android:id="@+id/miTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />


</LinearLayout>