<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElegirNombreUser">

    <LinearLayout
        android:id="@+id/mostrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"
            android:text="@string/escribeNick"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/miNombreDeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="10" />

        <Button
            android:id="@+id/botonValidar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="?android:attr/colorActivatedHighlight"
            android:onClick="vamosMain"
            android:text="@string/insertarNombre" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_light"
            android:onClick="mostrarPartida"
            android:text="@string/ultimaPartida" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tablaUltimaPartida"
                android:background="#51B435"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/j1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/j2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dificultad" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/resultados" />
            </TableRow>

            <TableRow
                android:id="@+id/tablaDatosUltimaPartida"
                android:padding="10dp">

                <TextView
                    android:id="@+id/recuperarJ1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/recuperarJ2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFF00" />

                <TextView
                    android:id="@+id/recuperarDificultad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FF2222" />

                <TextView
                    android:id="@+id/recuperarGanador"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#32CD32" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</RelativeLayout>