<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListarRankingPartidas">
<!--
    <Button
        android:id="@+id/buttonVolverRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="vueltaPrincipalRanking"
        android:text="@string/goBackButton" />
-->
    <TextView
        android:id="@+id/resultadosRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resultadoRankings"
        android:textSize="20dp"
        android:textStyle="bold">

    </TextView>


    <EditText
        android:id="@+id/editTextModificarNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nombre del usuario"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="ID del Usuario" />

    <Button
        android:id="@+id/botonActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#03A9F4"
        android:onClick="actualizarNombre"
        android:text="@string/actualizar" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TableRow
            android:background="@android:color/holo_blue_light"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/usuario" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/partidas" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/puntos" />

        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/listaRanking"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/miTextViewRanking2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>